--- a/index.html
+++ b/index.html
@@ -1,26 +1,34 @@
-# <center>Perpustakaan Annisa</center>
-# <center>Selamat Datang di Perpustakaan Annisa Fitriani</center>
-![WhatsApp Image 2025-02-24 at 12 08 48](https://github.com/user-attachments/assets/0b384921-3216-40c7-8c89-fefb10ebaf38)
-<body>
- <h2>About Me</h2>
- Hi, perkenalkan, nama saya Annisa. Ini adalah homepage perpustakaan personal saya yang berisi tugas-tugas akademik.
-<html>
+<!DOCTYPE html>
+<html lang="id">
 <head>
-<style>
-body {
-    background-color: #ADD8E6;
-}
-h1 {
-    background-color: ##00FFFF;
-}
-p {
-    background-color: #00FFFF);
-}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Perpustakaan Juliani</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
- 
+    <header>
+        <h1>Perpustakaan Juliani</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Homepage</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h2>Halo 👋</h2>
+        <p>Selamat datang di website Perpustakaan Digital Juliani. Salam kenal, saya mahasiswa jurusan Perpustakaan dan Sains Informasi di Universitas Sumatera Utara. Website ini dibuat guna memenuhi tugas dan praktik Mata Kuliah Pengembangan Web Perpustakaan.</p>
+        
+        <h3>Kerja sama dengan Perpustakaan lain</h3>
+        <a href="#">Perpustakaan Freedom</a>
+
+        <div class="image-container">
+            <img src="library.jpg" alt="Perpustakaan">
+        </div>
+    </main>
 </body>
 </html>
-<h3><a href="http://pustaka.unp.ac.id/">Kerjasama</a>
- <h2><a href="https://annisafitriani254.github.io/Contact_Us/">Contact Us</a>
+
