--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Perpustakaan Juliani</h1>
+        <h1>Perpustakaan Annisa</h1>
         <nav>
             <ul>
                 <li><a href="#">Homepage</a></li>
@@ -20,10 +20,10 @@
 
     <main>
         <h2>Halo 👋</h2>
-        <p>Selamat datang di website Perpustakaan Digital Juliani. Salam kenal, saya mahasiswa jurusan Perpustakaan dan Sains Informasi di Universitas Sumatera Utara. Website ini dibuat guna memenuhi tugas dan praktik Mata Kuliah Pengembangan Web Perpustakaan.</p>
+        <p>Selamat datang di website Perpustakaan Digital Annisa. Salam kenal, saya mahasiswa jurusan Perpustakaan dan Sains Informasi di Universitas Sumatera Utara. Website ini dibuat guna memenuhi tugas dan praktik Mata Kuliah Pengembangan Web Perpustakaan.</p>
         
         <h3>Kerja sama dengan Perpustakaan lain</h3>
-        <a href="#">Perpustakaan Freedom</a>
+        <a href="#">http://pustaka.unp.ac.id/kki</a>
 
         <div class="image-container">
             <img src="library.jpg" alt="Perpustakaan">
