--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         <h2>Halo 👋</h2>
         <p>Selamat datang di website Perpustakaan Digital Annisa. Salam kenal, saya mahasiswa jurusan Perpustakaan dan Sains Informasi di Universitas Sumatera Utara. Website ini dibuat guna memenuhi tugas dan praktik Mata Kuliah Pengembangan Web Perpustakaan.</p>
         
-        <h3>Kerja sama dengan Perpustakaan lain</h3>
-        <a href="#">Perpustakaan Unp</a>
+       <h4><a href="https://perpustakaan.poltekparmedan.ac.id/">Kerjasama</a>
 
         <div class="image-container">
             <img src="library.jpg" alt="Perpustakaan">
