--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h2>Halo 👋</h2>
         <p>Selamat datang di website Perpustakaan Digital Annisa. Salam kenal, saya mahasiswa jurusan Perpustakaan dan Sains Informasi di Universitas Sumatera Utara. Website ini dibuat guna memenuhi tugas dan praktik Mata Kuliah Pengembangan Web Perpustakaan.</p>
         
-       <h4><a href="https://perpustakaan.poltekparmedan.ac.id/">Kerjasama</a>
+       <h4><a href="https://http://pustaka.unp.ac.id/kki/">Kerjasama</a>
 
         <div class="image-container">
             <img src="library.jpg" alt="Perpustakaan">
