--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
         
        <h4><a href="https://http://pustaka.unp.ac.id/kki/">Kerjasama</a>
 
-        <div class="image-container">
-            <img src="library.jpg" alt="Perpustakaan">
-        </div>
-    </main>
+        footer>
+        <p>© Annisa Fitriani 2025</p>
+    </footer>
 </body>
 </html>
 
