--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         
        <h4><a href="https://http://pustaka.unp.ac.id/kki/">Kerjasama</a>
 
-        footer>
+        <footer>
         <p>© Annisa Fitriani 2025</p>
     </footer>
 </body>
