--- a/index.html
+++ b/index.html
@@ -3,30 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perpustakaan Juliani</title>
+    <title>Perpustakaan Aura</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Perpustakaan Annisa</h1>
+        <h1>PERPUSTAKAAN AURA</h1>
         <nav>
-            <ul>
-                <li><a href="#">Homepage</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact Us</a></li>
-            </ul>
+            <a href="index.html" class="active">Beranda</a>
+            <a href="tentang-saya.html">Hubungi Kami</a>
         </nav>
     </header>
-
     <main>
-        <h2>Halo 👋</h2>
-        <p>Selamat datang di website Perpustakaan Digital Annisa. Salam kenal, saya mahasiswa jurusan Perpustakaan dan Sains Informasi di Universitas Sumatera Utara. Website ini dibuat guna memenuhi tugas dan praktik Mata Kuliah Pengembangan Web Perpustakaan.</p>
-        
-       <h4><a href="https://http://pustaka.unp.ac.id/kki/">Kerjasama</a>
-
-        <footer>
-        <p>© Annisa Fitriani 2025</p>
+        <h2>Selamat Datang di Perpustakaan Aura</h2>
+        <p>Website ini berisi informasi mengenai perpustakaan dan ilmu sains informasi.</p>
+    </main>
+    <footer>
+        <p>© Aura Adisty Lesmana 2025</p>
     </footer>
 </body>
 </html>
-
