--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perpustakaan Aura</title>
+    <title>Perpustakaan Annisa</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>PERPUSTAKAAN AURA</h1>
+        <h1>PERPUSTAKAAN Annisa</h1>
         <nav>
             <a href="index.html" class="active">Beranda</a>
-            <a href="tentang-saya.html">Hubungi Kami</a>
+            <a href="about.html">Hubungi Kami</a>
         </nav>
     </header>
     <main>
-        <h2>Selamat Datang di Perpustakaan Aura</h2>
+        <h2>Selamat Datang di Perpustakaan Annisa</h2>
         <p>Website ini berisi informasi mengenai perpustakaan dan ilmu sains informasi.</p>
     </main>
     <footer>
-        <p>© Aura Adisty Lesmana 2025</p>
+        <p>© Annisa Fitriani 2025</p>
     </footer>
 </body>
 </html>
