--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>PERPUSTAKAAN Annisa</h1>
+        <h1>PERPUSTAKAAN ANNISA</h1>
         <nav>
             <a href="index.html">Beranda</a>
             <a href="about.html" class="active">Hubungi Kami</a>
