--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>PERPUSTAKAAN Annisa</h1>
+        <h1>PERPUSTAKAAN ANNISA</h1>
         <nav>
             <a href="index.html" class="active">Beranda</a>
             <a href="about.html">Hubungi Kami</a>
