--- a/about.html
+++ b/about.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Pribadi</title>
+    <title>Tentang Saya</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>PERPUSTAKAAN ANNISA</h1>
         <nav>
-            <a href="index.html">Beranda</a>
-            <a href="about.html" class="active">Hubungi Kami</a>
+            <a href="index.html" class="button">Beranda</a>
+            <a href="about.html" class="button">about.html</a>
         </nav>
     </header>
     <main>
@@ -27,7 +27,7 @@
             </tr>
             <tr>
                 <td>NIM</td>
-                <td>220709067</td>
+                <td>220709027</td>
             </tr>
             <tr>
                 <td>Program Studi</td>
@@ -45,8 +45,7 @@
         <a href="index.html" class="back-link">Kembali ke Beranda</a>
     </main>
     <footer>
-        <p>© Annisa Fitriani 2025</p>
+        <p>© 2025 Annisa Fitriani</p>
     </footer>
 </body>
 </html>
-
