--- a/index.html
+++ b/index.html
@@ -3,23 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perpustakaan Annisa</title>
+    <title>Perpustakaan ANNISA</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>PERPUSTAKAAN ANNISA</h1>
         <nav>
-            <a href="index.html" class="active">Beranda</a>
-            <a href="about.html">Hubungi Kami</a>
+            <a href="about.html" class="button">about me</a>
+            <a href="contact-us.html" class="button">Hubungi Kami</a>
         </nav>
     </header>
     <main>
-        <h2>Selamat Datang di Perpustakaan Annisa</h2>
-        <p>Website ini berisi informasi mengenai perpustakaan dan ilmu sains informasi.</p>
+        <h2>Selamat Datang di Perpustakaan Annisa!</h2>
+        <p>
+            Perkenalkan nama saya adalah <strong>Annisa Fitriani</strong> dan ini adalah perpustakaan pribadi saya yang didedikasikan untuk berbagi ilmu pengetahuan dan wawasan. 
+            Perpustakaan ini berisi berbagai koleksi buku pribadi, arsip tugas-tugas perkuliahan, serta <em>e-book</em> yang dapat diakses secara gratis.
+        </p>
+        <h3>Kerja Sama dan Referensi</h3>
+        <p><strong>Perpustakaan Universitas Indonesia</strong></p>
     </main>
     <footer>
-        <p>© Annisa Fitriani 2025</p>
+        <p>© 2025 Annisa Fitriani</p>
     </footer>
 </body>
 </html>
