--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             Perpustakaan ini berisi berbagai koleksi buku pribadi, arsip tugas-tugas perkuliahan, serta <em>e-book</em> yang dapat diakses secara gratis.
         </p>
         <h3>Kerja Sama dan Referensi</h3>
-        <a href="http://pustaka.unp.ac.id/kki/" target="_blank">Perpustakaan Universitas Indonesia</a>
+        <a href="http://pustaka.unp.ac.id/kki/" target="_blank">Perpustakaan Universitas Negeri Padang</a>
     </main>
     <footer>
         <p>© 2025 Annisa Fitriani</p>
