--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <main>
         <h2>Selamat Datang di Perpustakaan Annisa!</h2>
         <p>
-            Perkenalkan nama saya adalah <strong>Annisa Fitriani</strong> dan ini adalah perpustakaan pribadi saya yang didedikasikan untuk berbagi ilmu pengetahuan dan wawasan. 
-            Perpustakaan ini berisi berbagai koleksi buku pribadi, arsip tugas-tugas perkuliahan, serta <em>e-book</em> yang dapat diakses secara gratis.
+            Hi, ini adalah Homepage Perpustakaan personal Ester Gea. Perpustakaan Ester Gea dibuat untuk memenuhi keperluan mata kuliah Pengembangan Web Perpustakaan yang nantinya Anda dapat menemukan berbagai konten yang saya bagikan!
         </p>
         <h3>Kerja Sama dan Referensi</h3>
         <a href="http://pustaka.unp.ac.id/kki/" target="_blank">Perpustakaan Universitas Negeri Padang</a>
