--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
         <h1>PERPUSTAKAAN ANNISA</h1>
         <nav>
             <a href="index.html" class="button">Beranda</a>
-            <a href="about.html" class="button">tentang saya</a>
+            <a href="About.html" class="button">tentang saya</a>
         </nav>
     </header>
     <main>
