--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>PERPUSTAKAAN ANNISA</h1>
         <nav>
-            <a href="about.html" class="button">about me</a>
+            <a href="about.html" class="button">About Me</a>
             <a href="contact-us.html" class="button">Hubungi Kami</a>
         </nav>
     </header>
