--- a/about.html
+++ b/about.html
@@ -16,32 +16,32 @@
     </header>
    <main>
        <table border="1" cellspacing="0" cellpadding="5">
-        <h2>Data Pribadi</h2>
-        <table>
-            <tr>
-                <th>Informasi</th>
-                <th>Detail</th>
-            </tr>
-            <tr>
-                <td>Nama</td>
-                <td>Aura Adisty Lesmana</td>
-            </tr>
-            <tr>
-                <td>NIM</td>
-                <td>220709067</td>
-            </tr>
-            <tr>
-                <td>Program Studi</td>
-                <td>Perpustakaan dan Sains Informasi</td>
-            </tr>
-            <tr>
-                <td>Fakultas</td>
-                <td>Ilmu Budaya</td>
-            </tr>
-            <tr>
-                <td>Universitas</td>
-                <td>Universitas Sumatera Utara</td>
-            </tr>
+        <table border="1" cellspacing="0" cellpadding="5">
+    <tr>
+        <th>Informasi</th>
+        <th>Detail</th>
+    </tr>
+    <tr>
+        <td>Nama</td>
+        <td>Annisa Fitriani</td>
+    </tr>
+    <tr>
+        <td>NIM</td>
+        <td>220709027</td>
+    </tr>
+    <tr>
+        <td>Program Studi</td>
+        <td>Perpustakaan dan Sains Informasi</td>
+    </tr>
+    <tr>
+        <td>Fakultas</td>
+        <td>Ilmu Budaya</td>
+    </tr>
+    <tr>
+        <td>Universitas</td>
+        <td>Universitas Sumatera Utara</td>
+    </tr>
+</table>
         </table>
         <a href="index.html" class="back-link">Kembali ke Beranda</a>
     </main>
