--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <main>
         <h2>Data Pribadi</h2>
         <p>Halaman ini berisi tentang informasi pribadi saya</p>
-        <table>
+        <table border="1" cellspacing="0" cellpadding="5">
             <tr>
                 <th>Informasi</th>
                 <th>Detail</th>
@@ -28,7 +28,7 @@
             </tr>
             <tr>
                 <td>NIM</td>
-                <td>220709067</td>
+                <td>220709027</td>
             </tr>
             <tr>
                 <td>Program Studi</td>
