--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
             </tr>
             <tr>
                 <td>Universitas</td>
-                <td>Universitas Negeri Padang</td>
+                <td>Universitas Sumatera Utara</td>
             </tr>
         </table>
         <a href="index.html" class="back-link">Kembali ke Beranda</a>
