--- a/about.html
+++ b/about.html
@@ -17,32 +17,34 @@
     <main>
         <h2>Data Pribadi</h2>
         <p>Halaman ini berisi tentang informasi pribadi saya</p>
-        <table border="1" cellspacing="0" cellpadding="5">
-            <tr>
-                <th>Informasi</th>
-                <th>Detail</th>
-            </tr>
-            <tr>
-                <td>Nama</td>
-                <td>Annisa Fitriani</td>
-            </tr>
-            <tr>
-                <td>NIM</td>
-                <td>220709027</td>
-            </tr>
-            <tr>
-                <td>Program Studi</td>
-                <td>Perpustakaan dan Sains Informasi</td>
-            </tr>
-            <tr>
-                <td>Fakultas</td>
-                <td>Ilmu Budaya</td>
-            </tr>
-            <tr>
-                <td>Universitas</td>
-                <td>Universitas Sumatera Utara</td>
-            </tr>
-        </table>
+       <div class="table-container">
+    <table border="1">
+        <tr>
+            <th>Informasi</th>
+            <th>Detail</th>
+        </tr>
+        <tr>
+            <td>Nama</td>
+            <td>Annisa Fitriani</td>
+        </tr>
+        <tr>
+            <td>NIM</td>
+            <td>220709027</td>
+        </tr>
+        <tr>
+            <td>Program Studi</td>
+            <td>Perpustakaan dan Sains Informasi</td>
+        </tr>
+        <tr>
+            <td>Fakultas</td>
+            <td>Ilmu Budaya</td>
+        </tr>
+        <tr>
+            <td>Universitas</td>
+            <td>Universitas Negeri Padang</td>
+        </tr>
+    </table>
+</div>
         <a href="index.html" class="back-link">Kembali ke Beranda</a>
     </main>
     <footer>
