--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
         </tr>
         <tr>
             <td>Universitas</td>
-            <td>Universitas Negeri Padang</td>
+            <td>Universitas Sumatera Utara</td>
         </tr>
     </table>
 </div>
