--- a/index.html
+++ b/index.html
@@ -3,27 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perpustakaan ANNISA</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Perpustakaan Annisa</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #006a71;
+            color: white;
+            text-align: center;
+        }
+        .header {
+            background-color: #004d4d;
+            padding: 20px;
+            font-size: 24px;
+            font-weight: bold;
+        }
+        .nav {
+            margin: 20px 0;
+        }
+        .nav button {
+            background-color: #d2a679;
+            border: none;
+            padding: 10px 20px;
+            margin: 5px;
+            font-size: 18px;
+            cursor: pointer;
+        }
+        .content {
+            background-color: #f8f8e5;
+            color: black;
+            padding: 20px;
+            margin: 20px auto;
+            width: 80%;
+            border-radius: 10px;
+        }
+        .library-image {
+            width: 100%;
+            max-height: 400px;
+            object-fit: cover;
+        }
+        .footer {
+            margin-top: 20px;
+            padding: 10px;
+            background-color: #004d4d;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>PERPUSTAKAAN ANNISA</h1>
-        <nav>
-            <a href="about.html" class="button">About Me</a>
-            <a href="contact-us.html" class="button">Hubungi Kami</a>
-        </nav>
-    </header>
-    <main>
+    <div class="header">PERPUSTAKAAN ANNISA</div>
+    <div class="nav">
+        <button onclick="location.href='about.html'">About Me</button>
+        <button onclick="location.href='contact.html'">Hubungi Kami</button>
+    </div>
+    <img src="1648990837-pexels-pixabay-256541.jpg" alt="Perpustakaan" class="library-image">
+    <div class="content">
         <h2>Selamat Datang di Perpustakaan Annisa!</h2>
-        <p>
-           "Selamat datang di Perpustakaan Annisa! Sebagai bagian dari upaya pengembangan ilmu dan pendidikan, perpustakaan ini hadir untuk memberikan berbagai sumber referensi yang dapat mendukung pembelajaran, penelitian, dan eksplorasi akademik. Kami percaya bahwa pengetahuan adalah kunci utama untuk membuka peluang masa depan yang lebih cerah. Semoga Anda menemukan manfaat dari setiap informasi yang tersedia di sini!"
-        </p>
-        <h3>Kerja Sama dan Referensi</h3>
-        <a href="http://pustaka.unp.ac.id/kki/" target="_blank">Perpustakaan Universitas Negeri Padang</a>
-    </main>
-    <footer>
-        <p>© 2025 Annisa Fitriani</p>
-    </footer>
+        <p>"Selamat datang di Perpustakaan Annisa! Sebagai bagian dari upaya pengembangan ilmu dan pendidikan, perpustakaan ini hadir untuk memberikan berbagai sumber referensi yang dapat mendukung pembelajaran, penelitian, dan eksplorasi akademik."</p>
+        <p><b>Kerja Sama dan Referensi</b></p>
+        <p><a href="#" style="color: blue;">Perpustakaan Universitas Negeri Padang</a></p>
+    </div>
+    <div class="footer">&copy; 2025 Annisa Fitriani</div>
 </body>
 </html>
