--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perpustakaan ANNISA</title>
-    <img src="images/1648990837-pexels-pixabay-256541.jpg" alt="1648990837-pexels-pixabay-256541" width="500">
     <link rel="stylesheet" href="style.css">
 </head>
+<p></p>
+ <img src="images/1648990837-pexels-pixabay-256541.jpg" alt="1648990837-pexels-pixabay-256541" width="500">
+</center>
 <body>
     <header>
         <h1>PERPUSTAKAAN ANNISA</h1>
