--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         <h3>Kerja Sama dan Referensi</h3>
         <a href="http://pustaka.unp.ac.id/kki/" target="_blank">Perpustakaan Universitas Negeri Padang</a>
     </main>
+    <div class="image-container">
+            <img src="1648990837-pexels-pixabay-256541.jpg" alt="Perpustakaan Annisa">
+        </div>
+    </div>
     <footer>
         <p>© 2025 Annisa Fitriani</p>
     </footer>
