--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="http://pustaka.unp.ac.id/kki/" target="_blank">Perpustakaan Universitas Negeri Padang</a>
     </main>
     <div class="image-container">
-            <img src="1648990837-pexels-pixabay-256541.jpg" alt="Perpustakaan Annisa">
+            <img src="https://1drv.ms/i/c/b4ece91aed06b2b4/ETvVtVjVYGJPn68_OL-wDgkB59Vbz_n5vb19Fmqi5OOf8Q?e=Yi3kyj" alt="Perpustakaan Annisa">
         </div>
     </div>
     <footer>
