--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
         <h2>Selamat Datang di Perpustakaan Annisa!</h2>
         <p></p>
-<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fstikeshb.ac.id%2Fperpustakaan-kampus-fungsi%2F&psig=AOvVaw1KZdEbbglqBudRupXBmYGm&ust=1742370647980000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCLDzis-Sk4wDFQAAAAAdAAAAABAK" width="500px"/>
+<img src="library-g207303354_1920.jpg" width="500px"/>
 </center>
         <p>
            "Selamat datang di Perpustakaan Annisa! Sebagai bagian dari upaya pengembangan ilmu dan pendidikan, perpustakaan ini hadir untuk memberikan berbagai sumber referensi yang dapat mendukung pembelajaran, penelitian, dan eksplorasi akademik. Kami percaya bahwa pengetahuan adalah kunci utama untuk membuka peluang masa depan yang lebih cerah. Semoga Anda menemukan manfaat dari setiap informasi yang tersedia di sini!"
