--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
     <footer>
         <p>© 2025 Annisa Fitriani</p>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
