--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
     <footer>
         <p>© 2025 Annisa Fitriani</p>
     </footer>
+    
+    <!-- Menyisipkan script.js -->
+    <script src="script.js"></script>
 </body>
 </html>
