--- a/contact-us.html
+++ b/contact-us.html
@@ -18,9 +18,9 @@
         <h2>Ada Saran atau Pertanyaan? Hubungi Kami!</h2>
         <p>Jika Anda ingin memberikan masukan atau menemukan sesuatu yang bisa diperbaiki, hubungi kami melalui:</p>
         <ul>
-            <li><a href="mailto:annisafitriani@example.com">Email</a></li>
-            <li><a href="https://wa.me/6281234794030" target="_blank">Chat via WhatsApp</a></li>
-            <li><a href="https://instagram.com/annisa" target="_blank">Kunjungi Instagram</a></li>
+            <li><a href="mailto:annsaftrnii254@gmail.com">Email</a></li>
+            <li><a href="https://wa.me/62287034757" target="_blank">Chat via WhatsApp</a></li>
+            <li><a href="https://instagram.com/annsaftrnii" target="_blank">Kunjungi Instagram</a></li>
         </ul>
 
         <h3>Atau, Anda bisa mengisi formulir di bawah ini:</h3>
