--- a/index.html
+++ b/index.html
@@ -20,6 +20,27 @@
         <p>
            "Selamat datang di Perpustakaan Annisa! Sebagai bagian dari upaya pengembangan ilmu dan pendidikan, perpustakaan ini hadir untuk memberikan berbagai sumber referensi yang dapat mendukung pembelajaran, penelitian, dan eksplorasi akademik. Kami percaya bahwa pengetahuan adalah kunci utama untuk membuka peluang masa depan yang lebih cerah. Semoga Anda menemukan manfaat dari setiap informasi yang tersedia di sini!"
         </p>
+         <section>
+        <h3>Koleksi Buku Unggulan</h3>
+        <ul>
+            <li><strong>Judul:</strong> Metodologi Penelitian Pendidikan</li>
+            <li><strong>Penulis:</strong> Sugiyono</li>
+            <li><strong>Kategori:</strong> Pendidikan</li>
+        </ul>
+    </section>
+
+    <!-- Tambahan Layanan Perpustakaan -->
+    <section>
+        <h3>Layanan Kami</h3>
+        <p>Kami menyediakan berbagai layanan seperti:</p>
+        <ul>
+            <li>Peminjaman dan pengembalian buku</li>
+            <li>Akses jurnal dan e-book digital</li>
+            <li>Ruang baca dan diskusi</li>
+            <li>Bimbingan penelitian akademik</li>
+        </ul>
+    </section>
+
         <h3>Kerja Sama dan Referensi</h3>
         <a href="http://pustaka.unp.ac.id/kki/" target="_blank">Perpustakaan Universitas Negeri Padang</a>
     </main>
