--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     </header>
     <main>
         <h2>Selamat Datang di Perpustakaan Annisa!</h2>
+        <div class="gif-container">
+    <img src="https://www.gambaranimasi.org/img-animasi-bergerak-perpustakaan-0005-151167.htm#linkit" alt="Animasi Perpustakaan" width="500">
+</div>
+
         <img src="library-g207303354_1920.jpg" alt="Perpustakaan Annisa" width="500">
         <p>
            "Selamat datang di Perpustakaan Annisa! Sebagai bagian dari upaya pengembangan ilmu dan pendidikan, perpustakaan ini hadir untuk memberikan berbagai sumber referensi yang dapat mendukung pembelajaran, penelitian, dan eksplorasi akademik. Kami percaya bahwa pengetahuan adalah kunci utama untuk membuka peluang masa depan yang lebih cerah. Semoga Anda menemukan manfaat dari setiap informasi yang tersedia di sini!"
