--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
         <h2>Selamat Datang di Perpustakaan Annisa!</h2>
         <div class="gif-container">
-    <img src="https://www.gambaranimasi.org/img-animasi-bergerak-perpustakaan-0005-151167.htm#linkit" alt="Animasi Perpustakaan" width="500">
+    <img src="animasi-bergerak-perpustakaan-0005.gif" alt="Perpustakaan Annisa" width="500">
 </div>
 
         <img src="library-g207303354_1920.jpg" alt="Perpustakaan Annisa" width="500">
