--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="parallax">
+    <div class="content">
     <header>
         <h1>PERPUSTAKAAN ANNISA</h1>
         <nav>
