--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h3>Koleksi Buku Digital</h3>
         <div class="container">
             <ul class="ebook-list">
-                <li onclick="openEbook('ebook1.pdf')">Buku 1: Belajar HTML</li>
+                <li onclick="openEbook('ebook1.pdf')">Buku 1: Empat Langkah Pengampunan</li>
                 <li onclick="openEbook('ebook2.pdf')">Buku 2: Panduan CSS</li>
                 <li onclick="openEbook('ebook3.pdf')">Buku 3: JavaScript untuk Pemula</li>
             </ul>
