--- a/index.html
+++ b/index.html
@@ -57,11 +57,10 @@
         </p>
         <h3>Koleksi Buku Digital</h3>
         <div class="container">
-            <ul class="ebook-list">
-                <li onclick="openEbook('ebook1.pdf')">Buku 1: Empat Langkah Pengampunan</li>
-                <li onclick="openEbook('ebook2.pdf')">Buku 2: Panduan CSS</li>
-                <li onclick="openEbook('ebook3.pdf')">Buku 3: JavaScript untuk Pemula</li>
-            </ul>
+           <ul class="ebook-list">
+    <ul class="ebook-list">
+    <li onclick="openEbook('')">
+        Buku 1: Belajar HTML
             <iframe id="ebookViewer" src=""></iframe>
         </div>
         <h3>Kerja Sama dan Referensi</h3>
