--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="container">
            <ul class="ebook-list">
     <ul class="ebook-list">
-    <li onclick="openEbook('')">
+    <li onclick="openEbook('ebook1.pdf')">
         Buku 1: Belajar HTML
             <iframe id="ebookViewer" src=""></iframe>
         </div>
