--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
            <ul class="ebook-list">
     <ul class="ebook-list">
     <li onclick="openEbook('ebook1.pdf')">
-        Buku 1: Belajar HTML
+        Buku 1: Empat Langkah Pengampunan
             <iframe id="ebookViewer" src=""></iframe>
         </div>
         <h3>Kerja Sama dan Referensi</h3>
