--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h2>Rekomendasi Buku</h2>
+    <div class="container">
+        <div class="book">
+            <a href="https://drive.google.com/file/d/1wNBCOEhe2u6DJo5f7wy75618LmNaveuh/view?usp=drive_link" target="_blank">
+                <img src="cover1.jpg" alt="Google Resume">
+                Google Resume
     <header>
         <h1>PERPUSTAKAAN ANNISA</h1>
         <nav>
