--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="book">
             <a href="https://drive.google.com/file/d/1wNBCOEhe2u6DJo5f7wy75618LmNaveuh/view?usp=drive_link" target="_blank">
-                <img src="cover1.jpg" alt="Google Resume">
+                <img src="tn_4stepscover-indonesian.jpg" alt="Google Resume">
                 Google Resume
     <header>
         <h1>PERPUSTAKAAN ANNISA</h1>
