--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
         <h3>Kerja Sama dan Referensi</h3>
         <a href="http://pustaka.unp.ac.id/kki/" target="_blank">Perpustakaan Universitas Negeri Padang</a>
     </main>
+    <!-- Rekomendasi Buku -->
+    <section id="rekomendasi-buku">
+        <h2>Rekomendasi Buku</h2>
+        <div class="container">
+            <div class="book">
+                <a href="https://link-ke-ebook1.pdf" target="_blank">
+                    <img src="cover1.jpg" alt="Google Resume">
+                </a>
+                <p>Google Resume</p>
+            </div>
+        </div>
+    </section>
     <footer>
         <p>© 2025 Annisa Fitriani</p>
     </footer>
