--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h2>Rekomendasi Buku</h2>
         <div class="container">
             <div class="book">
-                <a href="https://link-ke-ebook1.pdf" target="_blank">
+                <a href="https://link-ke-ebook1.pdf" target="Empat Langkah Pengampunan">
                     <img src="cover1.jpg" alt="Google Resume">
                 </a>
                 <p>Google Resume</p>
