--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="container">
             <div class="book">
                 <a href="https://link-ke-ebook1.pdf" target="Empat Langkah Pengampunan">
-                    <img src="cover1.jpg" alt="Google Resume">
+                    <img src="tn_4stepscover-indonesian.jpg" alt="Google Resume">
                 </a>
                 <p>Google Resume</p>
             </div>
